--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,25 @@
-sudo: required
-dist: trusty
+sudo: false
 language: python
 
 python:
   - 2.7
   - 3.4
   - 3.5
+  - 3.5.1
+  - 3.5.2
 
 cache: apt
 
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y python-dev
-  - sudo apt-get install -y libdwarf-dev
-  - sudo apt-get install -y libelfg0-dev
-  - sudo apt-get install -y libunwind8-dev
+addons:
+  apt:
+    sources:
+    - sourceline: 'deb http://ftp.us.debian.org/debian unstable main contrib non-free'
+      key_url: 'https://ftp-master.debian.org/keys/archive-key-8.asc'
+    packages:
+      - python-dev
+      - libdwarf-dev
+      - libelfg0-dev
+      - libunwind8-dev
 
 install:
   - pip install .
