--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ python:
   - 2.7
   - 3.4
   - 3.5
+  - 3.5.1
+  - 3.5.2
+  - 3.5.2
+  - 3.6
+  - nightly
+  - pypy
+  - pypy3
 
 cache: apt
 
@@ -20,8 +27,7 @@ install:
   - pip install .
 
 script:
-  - py.test vmprof/ -vrs
-  - py.test jitlog/ -vrs
+  - py.test -vrs
 
 notifications:
   irc:
