--- a/appveyor.yml
+++ b/appveyor.yml
@@ -70,6 +70,7 @@ build_script:
 test_script:
   # Run the project tests
   - "py.test vmprof/ -vrs"
+  - python -m vmprof -o test.vmprof vmprofdemo.py && vmprofshow test.vmprof
 
 #after_test:
 #  # If tests are successful, create binary packages for the project.
