--- a/appveyor.yml
+++ b/appveyor.yml
@@ -65,7 +65,7 @@ install:
 
 build_script:
   # Build the compiled extension
-  - "python setup.py install"
+  - pip install .
 
 test_script:
   # Run the project tests
